--- a/app/circleci/config.yml
+++ b/app/circleci/config.yml
@@ -1,40 +1,41 @@
-workflows:
-  version: 2
-  build:
-  jobs:
-  - build:
-      filters:
-        branches:
-          only:
-          - main
-
-  - deploy:
-      filters:
-        branches:
-          only:
-          - main
-
-        requires:
-          -build
+version: 2.1
 
 orbs:
   ruby: circleci/ruby@1.4.0
 
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - main
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - main
+
 jobs:
   build:
     working_directory: ~/hotelApp
-     docker:
-       - image: cimg/ruby:3.3.0
+    docker:
+      - image: cimg/ruby:3.3.0
     steps:
-    - checkout
-    - setup_remote_docker
-    - run:
-      name: hello
-      command: echo hello
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: hello
+          command: echo hello
+
   deploy:
     docker:
-    - image: cimg/ruby:3.1.0
+      - image: cimg/ruby:3.1.0
     steps:
       - run:
-       name: world
-       command: echo world
+          name: world
+          command: echo world
